--- a/ShoppingCart/Base.lproj/Main.storyboard
+++ b/ShoppingCart/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
                                     <segment title="Newest"/>
                                     <segment title="Price"/>
                                     <segment title="Title"/>
+                                    <segment title="Type"/>
                                 </segments>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -133,15 +134,6 @@
                                     <action selector="savePressed:" destination="IMc-iJ-xOh" eventType="touchUpInside" id="lN6-tj-geV"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tb0-Mh-RfJ">
-                                <rect key="frame" x="16" y="294" width="343" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="uWH-7k-Gyi"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UWq-zc-Fbt" customClass="CustomTextField" customModule="ShoppingCart" customModuleProvider="target">
                                 <rect key="frame" x="132" y="83" width="235" height="40"/>
                                 <color key="backgroundColor" red="0.82452987921261123" green="0.82167351572896397" blue="0.88011579949238583" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -165,16 +157,35 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZlN-uz-Qew">
+                                <rect key="frame" x="37" y="301" width="300" height="21"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tb0-Mh-RfJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="21"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lf7-qs-guy">
+                                        <rect key="frame" x="150" y="0.0" width="150" height="21"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="8tJ-YS-T3L"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="PHS-pi-6w7" firstAttribute="top" secondItem="o0U-6e-Tuv" secondAttribute="bottom" constant="8" symbolic="YES" id="88J-fu-r3q"/>
                             <constraint firstItem="hdc-Da-g8P" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leading" constant="17" id="ELa-lm-aHJ"/>
-                            <constraint firstItem="tb0-Mh-RfJ" firstAttribute="trailing" secondItem="m9C-zb-BpR" secondAttribute="trailingMargin" id="GhH-ko-jbg"/>
                             <constraint firstItem="PHS-pi-6w7" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" constant="8" id="K8D-ev-N2i"/>
                             <constraint firstItem="UWq-zc-Fbt" firstAttribute="leading" secondItem="cQn-V9-khq" secondAttribute="trailing" constant="8" symbolic="YES" id="L5k-5j-59i"/>
+                            <constraint firstItem="hdc-Da-g8P" firstAttribute="top" secondItem="ZlN-uz-Qew" secondAttribute="bottom" constant="25" id="L98-4m-RJr"/>
                             <constraint firstItem="cQn-V9-khq" firstAttribute="top" secondItem="UGH-x0-g6F" secondAttribute="bottom" constant="8" id="ND4-4d-sAD"/>
-                            <constraint firstItem="tb0-Mh-RfJ" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" id="SBn-7I-JO2"/>
                             <constraint firstItem="cQn-V9-khq" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" constant="8" id="Sqh-rT-Wiu"/>
                             <constraint firstItem="PHS-pi-6w7" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" constant="8" id="U0i-7L-Fy4"/>
                             <constraint firstItem="lZW-TR-Kyr" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" id="UfX-e2-tXn"/>
@@ -188,7 +199,8 @@
                             <constraint firstAttribute="trailing" secondItem="hdc-Da-g8P" secondAttribute="trailing" constant="18" id="jtT-Na-xA2"/>
                             <constraint firstItem="UWq-zc-Fbt" firstAttribute="top" secondItem="UGH-x0-g6F" secondAttribute="bottom" constant="19" id="k20-Vz-BuR"/>
                             <constraint firstItem="WeQ-nA-zDb" firstAttribute="leading" secondItem="cQn-V9-khq" secondAttribute="trailing" constant="8" symbolic="YES" id="kB3-L7-XkL"/>
-                            <constraint firstItem="hdc-Da-g8P" firstAttribute="top" secondItem="tb0-Mh-RfJ" secondAttribute="bottom" constant="8" id="pEU-bf-nV5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZlN-uz-Qew" secondAttribute="trailing" constant="8" id="w9z-EF-z4u"/>
+                            <constraint firstItem="ZlN-uz-Qew" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" constant="8" id="x8B-1u-WcR"/>
                             <constraint firstItem="PHS-pi-6w7" firstAttribute="leading" secondItem="m9C-zb-BpR" secondAttribute="leadingMargin" constant="8" id="zQV-45-ncD"/>
                         </constraints>
                     </view>
